--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -1379,6 +1379,21 @@ publisher = "Wiley-Blackwell",
   year     = {2014},
 }
 
+@inproceedings{Nothman2009,
+ author = {Nothman, Joel and Murphy, Tara and Curran, James R.},
+ title = {Analysing Wikipedia and Gold-standard Corpora for NER Training},
+ booktitle = {Proceedings of the 12th Conference of the European Chapter of the Association for Computational Linguistics},
+ series = {EACL '09},
+ year = {2009},
+ location = {Athens, Greece},
+ pages = {612--620},
+ numpages = {9},
+ acmid = {1609135},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+
 @Article{2007.Tsatsaronis.WSDwithSpreading,
   author    = {Tsatsaronis, George and Vazirgiannis, Michalis and Androutsopoulos, Ion},
   title     = {Word Sense Disambiguation with Spreading Activation Networks Generated from Thesauri},
